# PythonAPI

./: .gitignore  .mypy.ini  README.md  pyproject.toml  sqlDB.db
pythonapi/: app.py  crud.py  database.py  models.py  schemas.py  sqlDB.db
tests/: conftest.py  test.db  test_pythonapi.py
